--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,46 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~primeflex/primeflex';
+@import './mixins.scss';
+
+html,
+body {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: var(--surface-100);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-size: 16px;
+  color: #333;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.container {
+  margin: 0 auto 0;
+  width: 100%;
+}
+
+@include breakpoint(sm) {
+  .container {
+    width: 552px;
+  }
+}
+
+@include breakpoint(md) {
+  .container {
+    width: 744px;
+  }
+}
+
+@include breakpoint(lg) {
+  .container {
+    width: 968px;
+  }
+}
+
+@include breakpoint(xl) {
+  .container {
+    width: 1176px;
+  }
+}
